# api/swagger/swagger.yaml
@@ -52,6 +52,27 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /node:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: NodeController
+    get:
+      security:
+        - basicAuthAtDomainUk: []
+        - basicAuthAtDomainFr: []
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: list
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
